--- a/projects/CRC.html
+++ b/projects/CRC.html
@@ -40,7 +40,7 @@
     <h1 class="mb-3">Columbia University Robotics Club: Combat Robotics</h1>
     
     <figure class="text-center my-3">
-  <img src="../assets/images/PortfolioCRC2.PNG" class="img-fluid rounded shadow" alt="Aluminum Accumulator 2025">
+  <img src="../assets/images/PortfolioCRC2.PNG" class="img-fluid rounded shadow" alt="">
   <figcaption class="mt-2 text-muted">Club Logo</figcaption>
 </figure>
 
