--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -36,31 +36,76 @@
   <!-- Project Content -->
   <section class="container my-5">
     <h1>Columbia Creative Research Lab: Automated Foosball Table Mechanical Researcher</h1>
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View">
+      <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
+    </figure>
     <p>
-      An AI &amp; ML-powered robotic foosball player built with
-      <strong>SolidWorks</strong>, <strong>MuJoCo</strong>, and
-      <strong>NVIDIA Isaac Sim</strong>.
+  <strong>Goal</strong> - Create an automated foosball table that is capable of playing Foosball using AI agents end to end without sensors to track the ball.
+    </p>
+    <p>
+      <strong>Tenure</strong> - 2024 to present
     </p>
 
-    <h2>Features</h2>
+ 
+
+    <h2 class="mt-4">Role:</h2>
+    <p>
+      <strong>Undergraduate Researcher</strong> - Researcher responsible for designing and building the mechanical systems for the foosball table. Additionally, helping to implement algorithms for the AI agents.
+    </p>
+
+    <h2 class="mt-4">Objectives:</h2>
     <ul>
-      <li>Reinforcement learning (Soft Actor-Critic)</li>
-      <li>High-speed vision system</li>
-      <li>Real-time robotic control</li>
-      <li>Motorized movement</li>
+      <li>Manufacture and build a foosball table robot capable of playing foosball at a human level.</li>
+      <li>Create simulated environment that can accurately reflect the factors in a foosball game.</li>
+      <li>Develop a better understanding of the limits of AI agents and what factors drive them.</li>
+      <li>Integrate high-speed, vision-based tracking systems and global-shutter camera technology to enable precise, real-time ball and rod state estimation without traditional sensors, providing accurate data for AI decision-making.</li>
     </ul>
 
-  
+      <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
+    <ul>
+     <li><strong>CAD: </strong>SolidWorks.</li>
+     <li><strong>Coding/Simulation: </strong> Python, Mujoco, NVIDIA Isaac Sim.</li>
+    <li><strong>Skills/Developed: </strong> Understanding of how to develop a project from start to finish; researching skills on new topics; better understanding of part selection.</li>
+    </ul>
+
+    <h2 class="mt-4">Contributions:</h2>
+
+    <h3>Mujoco Simulated Environment</h3>
+    <ul>
+      <li>Created a simulated environment for the foosball table, sticks, and ball using physics simulator Mujoco.</li>
+      <li>Tested and tuned physics attributes of the foosmen and foosball.</li>
+      <li>Used simulated environment to train AI agents in python by running iterations of scoring the ball.</li>
+      <li><strong>Learned/Developed:</strong> Familiarity with simulated environments; Better understanding of Python and its libraries; Understanding of how AI agents operate. </li>
+    </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Foosball Environment">
       <figcaption class="mt-2 text-muted">Foosball Simulated Environment</figcaption>
     </figure>
 
+
+
+
+    <h3>Full Foosball CAD</h3>
+    <ul>
+      <li> Modeled entire CAD of foosball table, foosball camera stand, ball reset mechanism and foosball mechanisms in Solidworks.</li>
+      <li> 3D printed parts for reset mechanism and foosball playing mechanisms.</li>
+      <li> Helped select parts and materials to model in CAD and later adopted in build phase. </li>
+      <li><strong>Learned/Developed:</strong> Proficiency in Solidworks; </li>
+    </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
       <figcaption class="mt-2 text-muted">Foosball Table Full CAD</figcaption>
     </figure>
 
+    <h3>Full Foosball Build</h3>
+    <ul>
+      <li> Utilized 20x20 aluminum rail extrusions along with aluminum corner brackets to build stable camera stand on foosball table.</li>
+      <li> Selected </li>
+      <li></li>
+      <li></li>
+      <li><strong>Learned/Developed:</strong></li>
+    </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Camera Setup" style="max-width:40%;">
       <figcaption class="mt-2 text-muted">Built Camera Setup and Handle Motors</figcaption>
