--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -37,7 +37,7 @@
   <section class="container my-5">
     <h1>Columbia Creative Research Lab: Automated Foosball Table Mechanical Researcher</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View">
+      <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
       <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
     </figure>
     <p>
@@ -76,7 +76,7 @@
       <li>Created a simulated environment for the foosball table, sticks, and ball using physics simulator Mujoco.</li>
       <li>Tested and tuned physics attributes of the foosmen and foosball.</li>
       <li>Used simulated environment to train AI agents in python by running iterations of scoring the ball.</li>
-      <li><strong>Learned/Developed:</strong> Familiarity with simulated environments; Better understanding of Python and its libraries; Understanding of how AI agents operate. </li>
+      <li><strong>Learned/Developed:</strong> Familiarity with simulated environments; Better understanding of Python and its libraries; Understanding of how AI agents operate; Proficiency in Github Version Control. </li>
     </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Foosball Environment">
@@ -91,7 +91,7 @@
       <li> Modeled entire CAD of foosball table, foosball camera stand, ball reset mechanism and foosball mechanisms in Solidworks.</li>
       <li> 3D printed parts for reset mechanism and foosball playing mechanisms.</li>
       <li> Helped select parts and materials to model in CAD and later adopted in build phase. </li>
-      <li><strong>Learned/Developed:</strong> Proficiency in Solidworks; </li>
+      <li><strong>Learned/Developed:</strong> Proficiency in Solidworks; Proficiency in version control; Learned methods of mechanical design.</li>
     </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
