--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <li><a class="dropdown-item" href="projects/CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
+              <li><a class="dropdown-item" href="projects/RITECMO.html">RIT Day Labs</a></li>
             </ul>
           </li>
         </ul>
