--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -26,6 +26,7 @@
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
+              <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
             </ul>
           </li>
         </ul>
@@ -35,7 +36,7 @@
 
   <!-- Project Content -->
   <section class="container my-5">
-    <h1>Columbia Creative Research Lab: Automated Foosball Table Mechanical Researcher</h1>
+    <h1>Columbia Creative Research Lab: Automated Foosball Table</h1>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
       <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
@@ -65,8 +66,8 @@
       <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
     <ul>
      <li><strong>CAD: </strong>SolidWorks.</li>
-     <li><strong>Coding/Simulation: </strong> Python, Mujoco, NVIDIA Isaac Sim.</li>
-    <li><strong>Skills/Developed: </strong> Understanding of how to develop a project from start to finish; researching skills on new topics; better understanding of part selection.</li>
+     <li><strong>Coding/Simulation: </strong> Python, C++, Mujoco, NVIDIA Isaac Sim.</li>
+    <li><strong>Skills/Developed: </strong> Understanding of how to develop a project from start to finish, researching skills on new topics, better understanding of part selection, Manufacturing Skills; Prototyping skills, System Integration.</li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
@@ -101,10 +102,10 @@
     <h3>Full Foosball Build</h3>
     <ul>
       <li> Utilized 20x20 aluminum rail extrusions along with aluminum corner brackets to build stable camera stand on foosball table.</li>
-      <li> Selected </li>
-      <li></li>
-      <li></li>
-      <li><strong>Learned/Developed:</strong></li>
+      <li> Built a low-cost vision and reset system, selecting ELP 48mp camera to mimic human visual capabilities.</li>
+      <li> Designed and implemented a multi-axis control architecture for the automated foosball table, selecting Teknic ClearPath-SC motors integrated via SC4-Hub configurations to support up to 16 actuated axes, with real-time, multi-threaded C++ control.</li>
+      <li> Developed potential automatic ball reset mechanism facilitating the movement of the ball with a vacuum.</li>
+      <li><strong>Learned/Developed:</strong> Skills with structural framing with aluminum extrusions; Knowledge of camera selection for machine vision; Familiarity with multi-axis motor control integration; Used C++ for real-time robotic control; Better understanding of hardware-software robotic system design.</li>
     </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Camera Setup" style="max-width:40%;">
