--- a/projects/WSP.html
+++ b/projects/WSP.html
@@ -27,6 +27,7 @@
               <li><a class="dropdown-item" href="CRC.html">Combat Robotics</a></li>
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
+              <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
             </ul>
           </li>
         </ul>
