--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -38,29 +38,27 @@
   <section class="container my-5">
     <h1>Rochester Institute of Technology Day Labs: Extracorporeal Membrane Oxygenator (ECMO) Research</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
+      <img src="../assets/images/PortfolioECMO.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
       <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
     </figure>
     <p>
-  <strong>Goal</strong> - Create an automated foosball table that is capable of playing Foosball using AI agents end to end without sensors to track the ball.
+  <strong>Goal</strong> - 
     </p>
     <p>
-      <strong>Tenure</strong> - 2024 to present
+      <strong>Tenure</strong> - Sep 2023 to May 2024
     </p>
 
  
 
     <h2 class="mt-4">Role:</h2>
     <p>
-      <strong>Undergraduate Researcher</strong> - Researcher responsible for designing and building the mechanical systems for the foosball table. Additionally, helping to implement algorithms for the AI agents.
-    </p>
-
+      <strong>Undergraduate Researcher</strong> -
     <h2 class="mt-4">Objectives:</h2>
     <ul>
-      <li>Manufacture and build a foosball table robot capable of playing foosball at a human level.</li>
-      <li>Create simulated environment that can accurately reflect the factors in a foosball game.</li>
-      <li>Develop a better understanding of the limits of AI agents and what factors drive them.</li>
-      <li>Integrate high-speed, vision-based tracking systems and global-shutter camera technology to enable precise, real-time ball and rod state estimation without traditional sensors, providing accurate data for AI decision-making.</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
 
       <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
