--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -67,7 +67,7 @@
     <ul>
      <li><strong>CAD: </strong>SolidWorks.</li>
      <li><strong>Coding/Simulation: </strong> Python, C++, Mujoco, NVIDIA Isaac Sim.</li>
-    <li><strong>Skills/Developed: </strong> Understanding of how to develop a project from start to finish, researching skills on new topics, better understanding of part selection, Manufacturing Skills; Prototyping skills, System Integration.</li>
+    <li><strong>Skills/Developed: </strong> Project development from concept to completion, research on new topics, part selection, manufacturing & prototyping skills (3D printing, band saw, machining), system integration.</li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
