--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -63,18 +63,18 @@
 
       <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
     <ul>
-     <li><strong>CAD: </strong>SolidWorks.</li>
-     <li><strong>Coding/Simulation: </strong> Python, C++, Mujoco, NVIDIA Isaac Sim.</li>
-    <li><strong>Skills/Developed: </strong> Understanding of how to develop a project from start to finish, researching skills on new topics, better understanding of part selection, Manufacturing Skills; Prototyping skills, System Integration.</li>
+     <li><strong>CAD: </strong>SolidWorks, Fusion360.</li>
+     <li><strong>Tools: </strong> MATLAB.</li>
+    <li><strong>Skills/Developed: </strong>PreForm; 3D printing;  </li>
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
 
-    <h3>Mujoco Simulated Environment</h3>
+    <h3>Air Reservoir</h3>
     <ul>
-      <li>Created a simulated environment for the foosball table, sticks, and ball using physics simulator Mujoco.</li>
-      <li>Tested and tuned physics attributes of the foosmen and foosball.</li>
-      <li>Used simulated environment to train AI agents in python by running iterations of scoring the ball.</li>
+      <li></li>
+      <li></li>
+      <li></li>
       <li><strong>Learned/Developed:</strong> Familiarity with simulated environments; Better understanding of Python and its libraries; Understanding of how AI agents operate; Proficiency in Github Version Control. </li>
     </ul>
     <figure class="text-center my-3">
