--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -75,7 +75,7 @@
       <li></li>
       <li></li>
       <li></li>
-      <li><strong>Learned/Developed:</strong> Familiarity with simulated environments; Better understanding of Python and its libraries; Understanding of how AI agents operate; Proficiency in Github Version Control. </li>
+      <li><strong>Learned/Developed:</strong>  </li>
     </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Foosball Environment">
