--- a/projects/F1.html
+++ b/projects/F1.html
@@ -28,13 +28,14 @@
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
+              <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
+  
   <!-- Project Content -->
   <section class="container my-5">
     
