--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -40,10 +40,10 @@
     <h1>Rochester Institute of Technology Day Labs: Extracorporeal Membrane Oxygenator (ECMO) Research</h1>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioECMO.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
-      <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
+      <figcaption class="mt-2 text-muted">Full ECMO Housing</figcaption>
     </figure>
     <p>
-  <strong>Goal</strong> - 
+  <strong>Goal</strong> - Develop and iterate on a extracorporeal membrane oxygenator to increase diffusion rates and allow for more efficient blood flow.
     </p>
     <p>
       <strong>Tenure</strong> - Sep 2023 to May 2024
@@ -53,7 +53,7 @@
 
     <h2 class="mt-4">Role:</h2>
     <p>
-      <strong>Undergraduate Researcher</strong> -
+      <strong>Undergraduate Researcher</strong> - Develop prototypes, tools, and models for testing
     <h2 class="mt-4">Objectives:</h2>
     <ul>
       <li></li>
@@ -79,37 +79,25 @@
       <li><strong>Learned/Developed:</strong>  </li>
     </ul>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.PNG" class="img-fluid rounded shadow" alt="Foosball Environment">
-      <figcaption class="mt-2 text-muted">Foosball Simulated Environment</figcaption>
+      <img src="../assets/images/PortfolioECMO4.png" class="img-fluid rounded shadow" alt="" style="max-width:50%;">
+      <figcaption class="mt-2 text-muted">Air Reservoir CAD</figcaption>
     </figure>
 
 
 
 
-    <h3>Full Foosball CAD</h3>
+    <h3>Blood Boat</h3>
     <ul>
-      <li> Modeled entire CAD of foosball table, foosball camera stand, ball reset mechanism and foosball mechanisms in Solidworks.</li>
-      <li> 3D printed parts for reset mechanism and foosball playing mechanisms.</li>
-      <li> Helped select parts and materials to model in CAD and later adopted in build phase. </li>
-      <li><strong>Learned/Developed:</strong> Proficiency in Solidworks; Proficiency in version control; Learned methods of mechanical design.</li>
+      <li> </li>
+      <li> </li>
+      <li> </li>
+      <li><strong>Learned/Developed:</strong></li>
     </ul>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
-      <figcaption class="mt-2 text-muted">Foosball Table Full CAD</figcaption>
+      <img src="../assets/images/PortfolioECMO3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
+      <figcaption class="mt-2 text-muted">Blood Boat</figcaption>
     </figure>
 
-    <h3>Full Foosball Build</h3>
-    <ul>
-      <li> Utilized 20x20 aluminum rail extrusions along with aluminum corner brackets to build stable camera stand on foosball table.</li>
-      <li> Built a low-cost vision and reset system, selecting ELP 48mp camera to mimic human visual capabilities.</li>
-      <li> Designed and implemented a multi-axis control architecture for the automated foosball table, selecting Teknic ClearPath-SC motors integrated via SC4-Hub configurations to support up to 16 actuated axes, with real-time, multi-threaded C++ control.</li>
-      <li> Developed potential automatic ball reset mechanism facilitating the movement of the ball with a vacuum.</li>
-      <li><strong>Learned/Developed:</strong> Skills with structural framing with aluminum extrusions; Knowledge of camera selection for machine vision; Familiarity with multi-axis motor control integration; Used C++ for real-time robotic control; Better understanding of hardware-software robotic system design.</li>
-    </ul>
-    <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Camera Setup" style="max-width:40%;">
-      <figcaption class="mt-2 text-muted">Built Camera Setup and Handle Motors</figcaption>
-    </figure>
 
 
     <p><a href="../index.html" class="btn btn-primary">← Return to Home</a></p>
