--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -27,6 +27,7 @@
               <li><a class="dropdown-item" href="Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
+              <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -107,10 +108,32 @@
       <li> Developed potential automatic ball reset mechanism facilitating the movement of the ball with a vacuum.</li>
       <li><strong>Learned/Developed:</strong> Skills with structural framing with aluminum extrusions; Knowledge of camera selection for machine vision; Familiarity with multi-axis motor control integration; Used C++ for real-time robotic control; Better understanding of hardware-software robotic system design.</li>
     </ul>
-    <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.2.jpg" class="img-fluid rounded shadow" alt="Camera Setup" style="max-width:40%;">
-      <figcaption class="mt-2 text-muted">Built Camera Setup and Handle Motors</figcaption>
+
+<div class="row justify-content-center text-center my-3">
+  <div class="col-md-4">
+    <figure>
+      <img src="../assets/images/PortfolioFR.2.jpg" 
+           class="img-fluid rounded shadow" 
+           alt="" 
+           style="max-width:80%;">
+      <figcaption class="mt-2 text-muted">
+        Camera and Handle Motor Setup
+      </figcaption>
     </figure>
+  </div>
+
+  <div class="col-md-4">
+    <figure>
+      <img src="../assets/images/PortfolioFR.4.png" 
+           class="img-fluid rounded shadow" 
+           alt="" 
+           style="max-width:100%;">
+      <figcaption class="mt-2 text-muted">
+        Camera View
+      </figcaption>
+    </figure>
+  </div>
+</div>
 
 
     <p><a href="../index.html" class="btn btn-primary">← Return to Home</a></p>
