--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -53,13 +53,12 @@
 
     <h2 class="mt-4">Role:</h2>
     <p>
-      <strong>Undergraduate Researcher</strong> - Develop prototypes, tools, and models for testing
+      <strong>Undergraduate Researcher</strong> - Develop prototypes, tools, and models for testing. Collect data and gain a better understanding of fluid dynamics, diffusion rates, and material properties.
     <h2 class="mt-4">Objectives:</h2>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Create a chip that mimics the air sacs of a lung with efficient diffusion rate and proper resilience.</li>
+      <li>Design and print various tools that can be used in fluid testing to pump different gases simultaneously.</li>
+      <li>Test designs in experimental conditions using cow blood, nitrogen gas, and various other substances.</li>
     </ul>
 
       <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
@@ -73,9 +72,9 @@
 
     <h3>Air Reservoir</h3>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Created redesign CAD of air reservoir in solidworks incorporating more inlets to allow different gases to interact with fluid.</li>
+      <li>3D printed a CAD-designed reservoir using resin material, optimized for improved fluid flow and capable of withstanding higher pressure. </li>
+      <li>Researched the interaction between various gases and found that creating a gaseous layer with nitrogen allows better fluid diffusion within air reservoir.</li>
       <li><strong>Learned/Developed:</strong>  </li>
     </ul>
     <figure class="text-center my-3">
@@ -88,9 +87,9 @@
 
     <h3>Blood Boat</h3>
     <ul>
-      <li> </li>
-      <li> </li>
-      <li> </li>
+      <li> Designed and printed a "Boat" used in blood pressure experiments to reduce air bubbles from the blood.</li>
+      <li> Tested various different materials and shapes to maximize buoyancy while decreasing bubbling.</li>
+    
       <li><strong>Learned/Developed:</strong></li>
     </ul>
     <figure class="text-center my-3">
