--- a/projects/F1.html
+++ b/projects/F1.html
@@ -56,7 +56,7 @@
 
     <h2 class="mt-4">Role:</h2>
     <p>
-      <strong>HV Enclosure Lead</strong> - Responsible for the full design cycle from
+      <strong>High Voltage Enclosure Lead</strong> - Responsible for the full design cycle from
       concept to implementation for FSAE accumulator and battery pack integration. Additionally, assisted and coordinated with other subteams when needed.
     </p>
 
