Vexu in dropdown

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="projects/RITECMO.html">RIT Day Labs</a></li>
+              <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
