--- a/projects/CRC.html
+++ b/projects/CRC.html
@@ -89,16 +89,28 @@
   <figcaption class="mt-2 text-muted">Overall CAD of Robot</figcaption>
 </figure>
 
-<h3>Drive Train Machining</h3>
+<h3>Machining and Robot Assembly</h3>
     <ul>
       <li>Helped machine drive train frame for robot using CNC Tormach Mill from block of aluminum.</li>
-      <li><strong>Learned/Developed:</strong> Skills with machining tools, Skills with manufacturing and material selection. </li>
+      <li>Worked with battery, motor, and esc tuning and testing.</li>
+      <li>Helped assemble robot, mold wheels, and create test box.</li>
+      <li><strong>Learned/Developed:</strong> Skills with machining tools; Skills with manufacturing and material selection; Familiarity with motor selection and wiring. </li>
     </ul>
   
-<figure class="text-center my-3">
-  <img src="../assets/images/PortfolioCURC1.jpg" class="img-fluid rounded shadow" alt="" style="max-width:40%;">
-  <figcaption class="mt-2 text-muted">Milling Frame</figcaption>
-</figure>
+<div class="row justify-content-center text-center my-3">
+  <div class="col-md-4">
+    <figure>
+      <img src="../assets/images/PortfolioCURC1.jpg" class="img-fluid rounded shadow" alt="" style="max-width:80%;">
+      <figcaption class="mt-2 text-muted">Milling Frame</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-4">
+    <figure>
+      <img src="../assets/images/PortfolioCRC3.jpg" class="img-fluid rounded shadow" alt="" style="max-width:80%;">
+      <figcaption class="mt-2 text-muted">Robot Assembly</figcaption>
+    </figure>
+  </div>
+</div>
 
     <a href="../index.html" class="btn btn-primary mt-3">← Return to Home</a>
   </section>
