--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -75,7 +75,7 @@
       <li>Created redesign CAD of air reservoir in solidworks incorporating more inlets to allow different gases to interact with fluid.</li>
       <li>3D printed a CAD-designed reservoir using resin material, optimized for improved fluid flow and capable of withstanding higher pressure. </li>
       <li>Researched the interaction between various gases and found that creating a gaseous layer with nitrogen allows better fluid diffusion within air reservoir.</li>
-      <li><strong>Learned/Developed:</strong>  </li>
+      <li><strong>Learned/Developed:</strong> Better understanding of pressure, fluid dynamics, and properties of gases; How to 3D print and design with resin. </li>
     </ul>
     <figure class="text-center my-3">
       <img src="../assets/images/PortfolioECMO4.png" class="img-fluid rounded shadow" alt="" style="max-width:50%;">
@@ -90,10 +90,10 @@
       <li> Designed and printed a "Boat" used in blood pressure experiments to reduce air bubbles from the blood.</li>
       <li> Tested various different materials and shapes to maximize buoyancy while decreasing bubbling.</li>
     
-      <li><strong>Learned/Developed:</strong></li>
+      <li><strong>Learned/Developed:</strong> Skills with modeling in Fusion360; Familiarity with testing with blood and gases.</li>
     </ul>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioECMO3.PNG" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
+      <img src="../assets/images/PortfolioECMO3.png" class="img-fluid rounded shadow" alt="CAD" style="max-width:50%;">
       <figcaption class="mt-2 text-muted">Blood Boat</figcaption>
     </figure>
 
