--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -34,3 +34,41 @@
       </div>
     </div>
   </nav>
+
+  <section class="container my-5">
+    
+    <h1 class="mb-3">RIT VEXU Robotics</h1>
+    <figure class="text-center my-3">
+      <img src="../assets/images/PortfolioVEXU.3.jpg" class="img-fluid rounded shadow" alt="team Photo">
+      <figcaption class="mt-2 text-muted">2023 Team Trophy Photo</figcaption>
+    </figure>
+    <p>
+      <strong>Goal</strong> - Design, build, and code 2 robots to compete in the VEXU 2023 Over Under Competition.
+    </p>
+    <p>
+      <strong>Tenure</strong> - September 2023 to June 2024
+    </p>
+
+ 
+
+    <h2 class="mt-4">Role:</h2>
+    <p>
+      <strong>Mechanical Team Designer & Builder</strong> - Responsible for designing and building the robot from conception in Solidworks using VEX standardized parts.
+    </p>
+
+    <h2 class="mt-4">Objectives:</h2>
+    <ul>
+      <li>Create a 15x15x15in robot capable of both playing defensively and offensively in the VEXU Over Under competition.</li>
+      <li>Create a 24x24x24in robot capable of launching "tri-balls" and work with field loaders.</li>
+      <li>Work with software team to develop a robot capable of scoring large amount of points in the 1 minute 30 second autonomous phase.</li>
+      <li>Develop a climbing mechanism capable of lifting the robots off the ground in a efficient manner to maximize points scored. </li>
+    </ul>
+
+      <h2 class="mt-4">Tools &amp; Technologies &amp; Skills</h2>
+    <ul>
+     <li><strong>CAD: </strong>SolidWorks.</li>
+    <li><strong>Manufacturing: </strong>Molding, 3D printing, Soldering, Drill press, Laser cutting.</li>
+    <li><strong>Skills/Developed: </strong>>Low-profile mechanism design, drivetrain–intake–climb system integration, rapid prototyping and iteration, failure analysis and redesign, strategic competition-focused design, collaboration with software and drive teams.</li>
+    </ul>
+
+    <h2 class="mt-4">Contributions:</h2>
