png adding and liic

--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -72,3 +72,56 @@
     </ul>
 
     <h2 class="mt-4">Contributions:</h2>
+    <h3>Climbing Mechanism</h3>
+<ul>
+  <li>Co-developed a vertical bar winch-based climbing system capable of achieving C-tier elevation, using a one-way claw latch and spring-assisted deployment for reliable bar engagement.</li>
+  <li>Designed the mechanism around a low-profile 15in chassis that allowed the robot to drive under the goal while still supporting full elevation capability.</li>
+  <li>Integrated a power take-off (PTO) system from the drivetrain to supply torque for climbing while conserving motor allocation and space.</li>
+  <li>Engineered a banded-out, double-acting pneumatic actuation to maintain elevation post-match and minimize piston stress.</li>
+  <li><strong>Learned/Developed:</strong> System integration under tight size constraints; balancing torque and mechanical stability; pneumatic control; strategic optimization for competition scoring tiers.</li>
+</ul>
+
+<div class="row text-center my-3">
+  <div class="col-md-6">
+    <figure>
+      <img src="../assets/images/PortfolioVEXU.6.jpg" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism - Prototype" style="max-width:60%;">
+      <figcaption class="mt-2 text-muted">Vertical Bar Winch Climb Prototype (C-Tier Capable)</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-6">
+    <figure>
+      <img src="../assets/images/PortfolioVEXU.4.png" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism - Final Assembly">
+      <figcaption class="mt-2 text-muted">Final 15in Robot</figcaption>
+    </figure>
+  </div>
+</div>
+
+<h3>Drive Train</h3>
+<ul>
+  <li>Collaborated on the design of a 2.75in omni-wheel drivetrain for improved maneuverability and packaging efficiency under a 5.78in height constraint.</li>
+  <li>Developed a custom 3D-printed motor cap system for compact motor stacking and rapid servicing, increasing drivetrain rigidity and modularity.</li>
+  <li>Implemented a sled-assisted barrier traversal system, allowing smooth crossing while maintaining traction and chassis stability.</li>
+  <li>Optimized motor positioning and gear spacing to fit within the 15in frame perimeter while supporting high-speed field traversal.</li>
+  <li><strong>Learned/Developed:</strong> CAD packaging for multi-motor layouts; rapid prototyping using VEX components; iterative testing for traction optimization; drive control coordination with software subteam.</li>
+</ul>
+
+<figure class="text-center my-3">
+  <img src="../assets/images/VEXU_Drivetrain.jpg" class="img-fluid rounded shadow" alt="Drivetrain CAD and Sled Design">
+  <figcaption class="mt-2 text-muted">2.75in Omni-Wheel Drivetrain with Custom Sleds</figcaption>
+</figure>
+
+<h3>Catapult System</h3>
+<ul>
+  <li>Designed and tuned a dual-motor catapult mechanism for the 24in competition robot, capable of launching triballs across the field with consistent trajectory control.</li>
+  <li>Integrated elastic energy storage and release optimization using high-tension rubber bands and ratcheted release systems for rapid reloading during autonomous periods.</li>
+  <li>Collaborated with the programming team to synchronize catapult firing and indexing with intake and autonomous routines, improving scoring precision.</li>
+  <li>Performed iterative launch angle and compression testing to maximize scoring consistency while reducing cycle times between shots.</li>
+  <li><strong>Learned/Developed:</strong> Mechanical energy storage principles; iterative prototype tuning; cross-team software integration; precision adjustment for high-speed competition mechanisms.</li>
+</ul>
+
+<figure class="text-center my-3">
+  <img src="../assets/images/VEXU_Catapult.jpg" class="img-fluid rounded shadow" alt="Dual Motor Catapult System">
+  <figcaption class="mt-2 text-muted">Dual-Motor Catapult System – 24in Robot</figcaption>
+</figure>
+
+<a href="../index.html" class="btn btn-primary mt-3">← Return to Home</a>
