new images and website dropdowns

--- a/projects/F1.html
+++ b/projects/F1.html
@@ -29,6 +29,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="LIIC.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -41,7 +42,7 @@
     
     <h1 class="mb-3">Columbia FSAE: Powertrain Subteam</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioF1.4.jpg" class="img-fluid rounded shadow" alt="Subteam Photo">
+      <img src="../assets/images/PortfolioF1.4.jpg" class="img-fluid rounded shadow" alt="Subteam Photo" style="max-width:60%;">
       <figcaption class="mt-2 text-muted">2025 Subteam Photo</figcaption>
     </figure>
     <p>
