--- a/projects/FoosballResearch.html
+++ b/projects/FoosballResearch.html
@@ -28,6 +28,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="LIIC.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -39,8 +40,8 @@
   <section class="container my-5">
     <h1>Columbia Creative Research Lab: Automated Foosball Table</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioFR.4.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
-      <figcaption class="mt-2 text-muted">Foosball Camera View</figcaption>
+      <img src="../assets/images/PortfolioFR5.png" class="img-fluid rounded shadow" alt="Foosball Camera View" style="max-width:50%;">
+      <figcaption class="mt-2 text-muted">Columbia Creative Research Lab Logo</figcaption>
     </figure>
     <p>
   <strong>Goal</strong> - Create an automated foosball table that is capable of playing Foosball using AI agents end to end without sensors to track the ball.
