--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -28,6 +28,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="LIIC.html">RIT VEXU Robotics</a></li>
             </ul>
           </li>
         </ul>
@@ -82,33 +83,49 @@
 </ul>
 
 <div class="row text-center my-3">
-  <div class="col-md-6">
+  <div class="col-md-4">
     <figure>
       <img src="../assets/images/PortfolioVEXU.6.jpg" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism - Prototype" style="max-width:60%;">
-      <figcaption class="mt-2 text-muted">Vertical Bar Winch Climb Prototype (C-Tier Capable)</figcaption>
+      <figcaption class="mt-2 text-muted"> 15in Robot Vertical Bar Winch Climb Prototype (C-Tier Capable)</figcaption>
     </figure>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <figure>
       <img src="../assets/images/PortfolioVEXU.4.png" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism - Final Assembly">
       <figcaption class="mt-2 text-muted">Final 15in Robot</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-4">
+    <figure>
+      <img src="../assets/images/PortfolioVEXU.8.png" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism 24in"style="max-width:80%;">
+      <figcaption class="mt-2 text-muted">24in Robot Vertical Climb (B-Tier Capable)</figcaption>
     </figure>
   </div>
 </div>
 
 <h3>Drive Train</h3>
 <ul>
-  <li>Collaborated on the design of a 2.75in omni-wheel drivetrain for improved maneuverability and packaging efficiency under a 5.78in height constraint.</li>
+  <li>Worked on design and manufacturing of molded wheels used for greater traction and more mobility on the robots.</li>
   <li>Developed a custom 3D-printed motor cap system for compact motor stacking and rapid servicing, increasing drivetrain rigidity and modularity.</li>
   <li>Implemented a sled-assisted barrier traversal system, allowing smooth crossing while maintaining traction and chassis stability.</li>
   <li>Optimized motor positioning and gear spacing to fit within the 15in frame perimeter while supporting high-speed field traversal.</li>
   <li><strong>Learned/Developed:</strong> CAD packaging for multi-motor layouts; rapid prototyping using VEX components; iterative testing for traction optimization; drive control coordination with software subteam.</li>
 </ul>
 
-<figure class="text-center my-3">
-  <img src="../assets/images/VEXU_Drivetrain.jpg" class="img-fluid rounded shadow" alt="Drivetrain CAD and Sled Design">
-  <figcaption class="mt-2 text-muted">2.75in Omni-Wheel Drivetrain with Custom Sleds</figcaption>
-</figure>
+<div class="row justify-content-center text-center my-3">
+  <div class="col-md-4 d-flex justify-content-center">
+    <figure>
+      <img src="../assets/images/PortfolioVEXU.9.png" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism - Prototype" style="max-width:60%;">
+      <figcaption class="mt-2 text-muted">Molded Traction Wheels</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-4 d-flex justify-content-center">
+    <figure>
+      <img src="../assets/images/PortfolioVEXU.10.png" class="img-fluid rounded shadow" alt="Vertical Bar Climb Mechanism 24in" style="max-width:80%;">
+      <figcaption class="mt-2 text-muted">Drivetrain With 3-D Printed Sled</figcaption>
+    </figure>
+  </div>
+</div>
 
 <h3>Catapult System</h3>
 <ul>
