--- a/projects/RITECMO.html
+++ b/projects/RITECMO.html
@@ -28,7 +28,7 @@
               <li><a class="dropdown-item" href="WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="RITECMO.html">RIT Day Labs</a></li>
               <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
-              <li><a class="dropdown-item" href="LIIC.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="LIIC.html">Long Island Ivy Insights, LLC</a></li>
             </ul>
           </li>
         </ul>
