--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               <li><a class="dropdown-item" href="projects/Coursework.html">Coursework</a></li>
               <li><a class="dropdown-item" href="projects/WSP.html">WSP Internship</a></li>
               <li><a class="dropdown-item" href="projects/RITECMO.html">RIT Day Labs</a></li>
-              <li><a class="dropdown-item" href="RITVex.html">RIT VEXU Robotics</a></li>
-              <li><a class="dropdown-item" href="LIIC.html">Long Island Ivy Insights, LLC</a></li>
+              <li><a class="dropdown-item" href="projects/RITVex.html">RIT VEXU Robotics</a></li>
+              <li><a class="dropdown-item" href="projects/LIIC.html">Long Island Ivy Insights, LLC</a></li>
             </ul>
           </li>
         </ul>
