--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -40,7 +40,7 @@
     
     <h1 class="mb-3">RIT VEXU Robotics</h1>
     <figure class="text-center my-3">
-      <img src="../assets/images/PortfolioVEXU.3.jpg" class="img-fluid rounded shadow" alt="team Photo">
+      <img src="../assets/images/PortfolioVEXU.3.jpg" class="img-fluid rounded shadow" alt="team Photo" style="max-width:60%;">
       <figcaption class="mt-2 text-muted">2023 Team Trophy Photo</figcaption>
     </figure>
     <p>
