--- a/projects/RITVex.html
+++ b/projects/RITVex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Automated Foosball Table</title>
+  <title>RIT VexU</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -142,3 +142,8 @@
 </figure>
 
 <a href="../index.html" class="btn btn-primary mt-3">← Return to Home</a>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
